--- a/app/public/bible.html
+++ b/app/public/bible.html
@@ -14,7 +14,7 @@
 
 <body>
   <div class="container">
-    <nav class="nav">
+    <nav class="nav sticky-top">
       <h1 class="staatliches title">ACCOUNTABILITY.</h1>
       <ul class="nav justify-content-center">
         <li class="nav-item">
