--- a/app/public/home.html
+++ b/app/public/home.html
@@ -14,31 +14,54 @@
 
 <body>
   <div class="container">
-    <nav class="nav">
-      <h1 class="staatliches title">ACCOUNTABILITY.</h1>
-      <ul class="nav justify-content-center">
-        <li class="nav-item">
-            <a class="nav-link active" href="home.html">Home</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="blog.html">Blogs</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="cms.html">New</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="pray.html">Pray</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="bible.html">Bible</a>
-        </li>
-      </ul>
+    <nav class="nav sticky-top">
+        <h1 class="staatliches title">ACCOUNTABILITY.</h1>
+        <ul class="nav justify-content-center">
+            <li class="nav-item">
+                <a class="nav-link active" href="home.html">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="blog.html">Blogs</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="cms.html">New</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="pray.html">Pray</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="bible.html">Bible</a>
+            </li>
+        </ul>
     </nav>
-    
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-            <h1 class="display-4 staatliches">Skippin devos again? Need accountability?</h1>
-            <p class="lead lato">this site will give you all the right tools and resources you need for the best help!</p>
+
+    <div class="row">
+        <div class="col">
+            <div id="carousel" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" src="images/harvey_cedars.jpg" alt="First slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="images/sunset_lake.jpg" alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="images/lights.jpg" alt="Third slide">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="row">
+        <div class="col">
+            <div class="jumbotron jumbotron-fluid">
+                <div class="container">
+                    <h1 class="display-4 staatliches">Skippin devos again? Need accountability?</h1>
+                    <p class="lead lato">this site will give you all the right tools and resources for your needs!</p>
+                </div>
+            </div>
         </div>
     </div>
    
