--- a/app/public/home.html
+++ b/app/public/home.html
@@ -18,19 +18,19 @@
         <h1 class="staatliches title">ACCOUNTABILITY.</h1>
         <ul class="nav justify-content-center">
             <li class="nav-item">
-                <a class="nav-link active" href="home.html">Home</a>
+                <a class="nav-link active" href="/">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="blog.html">Blogs</a>
+                <a class="nav-link" href="/blog">Blogs</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="cms.html">New</a>
+                <a class="nav-link" href="/cms">New</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="pray.html">Pray</a>
+                <a class="nav-link" href="/pray">Pray</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="bible.html">Bible</a>
+                <a class="nav-link" href="/bible">Bible</a>
             </li>
         </ul>
     </nav>
